--- a/SystemResult.html
+++ b/SystemResult.html
@@ -303,7 +303,7 @@
 		<div class="w3-container w3-sand">
 			<div class="w3-margin-top">
 				<div style="line-height:1;"><span style="display:inline-block;padding-right:24px;">001018-08-1043</span><span style="display:inline-block;">AD077E031</span></div>
-				<div class="w3-xlarge" style="line-height:1.1;"><b>Muhammad Redzuan Bin Abdul Rahim</b></div>
+				<div class="w3-xlarge" style="line-height:1.1;"><b>Muhammad Radzuan Bin Abdul Rahim</b></div>
 			</div>
 			<div class="w3-margin-top">
 				<span class="w3-xlarge w3-text-blue" style="line-height:1.1;display:block;"><b>Layak Mendapat Sijil</b></span>
@@ -430,4 +430,5 @@
 
 </body>
 </html>
+
 
